--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ footer{border-top:1px solid rgba(148,163,184,.12); color:var(--muted); padding:2
     <section class="hero">
       <div>
         <h1>Business & Data Analyst • AI Evaluation Specialist</h1>
-        <p>Power BI dashboards, SQL/Python analytics, and AI evaluation across English/Hindi. I turn messy data into clear decisions and fast visual stories.</p>
+        <p>Power BI dashboards, SQL/Python analytics. I turn messy data into clear decisions and fast visual stories.</p>
         <div class="cta">
           <a class="btn" href="#projects" aria-label="View projects">View Projects ▸</a>
           <a class="btn ghost" href="#contact">Contact Me</a>
