--- a/index.html
+++ b/index.html
@@ -1,111 +1,4 @@
-<!doctype html>
-
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mohammad Zaid Shaikh • Portfolio</title>
-  <meta name="description" content="Business & Data Analyst • AI Evaluation Specialist • Fast, responsive portfolio" />
-  <meta property="og:title" content="Mohammad Zaid Shaikh • Portfolio" />
-  <meta property="og:description" content="Business & Data Analyst • AI Evaluation Specialist • Projects, skills & contact" />
-  <meta property="og:type" content="website" />
-  <meta name="theme-color" content="#0ea5e9" />
-  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='50' fill='%230ea5e9'/%3E%3Ctext x='50' y='62' font-size='60' text-anchor='middle' fill='white' font-family='Arial,Helvetica,sans-serif'%3EZ%3C/text%3E%3C/svg%3E" />
-  <style>
-    :root{
-      --bg:#0b1220;          /* page bg */
-      --card:#0f172a;        /* card bg */
-      --muted:#94a3b8;       /* muted text */
-      --text:#e5e7eb;        /* main text */
-      --brand:#0ea5e9;       /* accent */
-      --brand-2:#22d3ee;     /* accent 2 */
-      --radius:18px;
-      --shadow:0 10px 30px rgba(2, 6, 23, .35);
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; font:16px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
-      background:radial-gradient(1200px 800px at 80% -10%, rgba(34,211,238,.06), transparent 60%),
-                 radial-gradient(900px 600px at 10% -10%, rgba(14,165,233,.10), transparent 60%),
-                 var(--bg);
-      color:var(--text);
-    }
-    a{color:var(--brand); text-decoration:none}
-    a:hover{text-decoration:underline}
-    .wrap{max-width:1100px; margin:0 auto; padding:24px}
-    header{
-      position:sticky; top:0; backdrop-filter:saturate(180%) blur(6px);
-      background:linear-gradient(to bottom, rgba(11,18,32,.85), rgba(11,18,32,.55));
-      border-bottom:1px solid rgba(148,163,184,.12);
-      z-index:10;
-    }
-    nav{display:flex; align-items:center; justify-content:space-between; gap:12px}
-    .brand{display:flex; align-items:center; gap:10px; font-weight:700}
-    .brand .logo{width:34px; height:34px; border-radius:10px; background:linear-gradient(135deg, var(--brand), var(--brand-2)); box-shadow:var(--shadow); display:grid; place-items:center;}
-    .brand .logo span{font-weight:800; color:#001927}
-    .links a{padding:10px 12px; border-radius:12px}
-    .links a:hover{background:#0f172a}.hero{display:grid; grid-template-columns:1.2fr .8fr; gap:28px; padding:56px 0 30px}
-.hero h1{font-size:clamp(28px, 4vw, 44px); line-height:1.15; margin:0 0 12px}
-.hero p{color:var(--muted); margin:0 0 18px}
-.cta{display:flex; gap:12px; flex-wrap:wrap}
-.btn{display:inline-flex; align-items:center; gap:10px; border:none; background:linear-gradient(135deg, var(--brand), var(--brand-2)); color:#04242e; padding:12px 18px; border-radius:14px; font-weight:700; cursor:pointer; box-shadow:var(--shadow)}
-.btn.ghost{background:transparent; color:var(--text); border:1px solid rgba(148,163,184,.25)}
-
-.card{background:linear-gradient(180deg, rgba(15,23,42,.8), rgba(15,23,42,.6)); border:1px solid rgba(148,163,184,.18); border-radius:var(--radius); box-shadow:var(--shadow)}
-.grid{display:grid; gap:18px}
-
-/* Projects */
-.projects{padding:20px 0 40px}
-.projects h2, .skills h2, .about h2, .contact h2{font-size:clamp(22px, 3vw, 30px)}
-.pgrid{grid-template-columns:repeat(auto-fit, minmax(260px, 1fr))}
-.project{padding:16px}
-.thumb{aspect-ratio:16/9; border-radius:12px; background:#0b2030; display:grid; place-items:center; overflow:hidden; border:1px solid rgba(148,163,184,.12)}
-.thumb svg{width:60%; opacity:.9}
-.project h3{margin:12px 0 6px; font-size:18px}
-.tags{display:flex; flex-wrap:wrap; gap:8px}
-.tag{font-size:12px; padding:6px 10px; background:#0b1a2a; border:1px solid rgba(148,163,184,.16); border-radius:999px; color:var(--muted)}
-
-/* Skills */
-.skills{padding:14px 0 40px}
-.chips{display:flex; flex-wrap:wrap; gap:10px}
-.chip{padding:10px 12px; border-radius:12px; background:#0d1b2b; border:1px solid rgba(148,163,184,.18)}
-
-/* About */
-.about{padding:14px 0 40px}
-.about .inner{display:grid; grid-template-columns:1.1fr .9fr; gap:18px}
-.about .me{padding:18px}
-.kpis{display:grid; grid-template-columns:repeat(3,1fr); gap:10px}
-.kpis .kpi{padding:14px; text-align:center}
-.kpi h4{margin:0; font-size:22px; color:var(--brand-2)}
-.kpi p{margin:4px 0 0; color:var(--muted)}
-
-/* Contact */
-.contact{padding:14px 0 60px}
-.contact .inner{display:grid; grid-template-columns:1fr 1fr; gap:18px}
-.contact a.btn{justify-content:center}
-
-footer{border-top:1px solid rgba(148,163,184,.12); color:var(--muted); padding:26px 0 40px}
-
-/* Responsive */
-@media (max-width: 900px){
-  .hero{grid-template-columns:1fr; padding-top:24px}
-  .about .inner, .contact .inner{grid-template-columns:1fr}
-}
-
-/* Motion safety */
-@media (prefers-reduced-motion: reduce){
-  *{scroll-behavior:auto; animation:none !important; transition:none !important}
-}
-
-  </style>
-</head>
-<body>
-  <header>
-    <div class="wrap">
-      <nav>
-        <div class="brand">
-          <div class="logo"><span>Z</span></div>
+https://zaidsk.github.io/zaidbusinessessolver/          <div class="logo"><span>Z</span></div>
           <span>Mohammad Zaid Shaikh</span>
         </div>
         <div class="links">
